# p-os

./: Cargo.toml  build.rs  rust-toolchain.toml
kernel/: Cargo.toml
kernel/src/: allocator.rs  gdt.rs  interrupts.rs  logger.rs  main.rs  memory.rs  serial.rs  terminal.rs  uninterruptible_mutex.rs
klib/: Cargo.toml
klib/src/: lib.rs
klib/src/interrupts/: mod.rs
klib/src/io/: mod.rs  print.rs  terminal.rs
src/: main.rs
