cargo-features = ["profile-rustflags"]

[package]
name = "p-os"
version = "0.1.0"
edition = "2021"
default-run = "p-os"

[profile.test.package.kernel]
rustflags = ["--test"]

[workspace]

[workspace.dependencies]
klib = { path = "klib" }
bootloader_api = "0.11.4"
bootloader-x86_64-common = "0.11.4"
log = { version = "0.4.20", default-features = false }
conquer-once = { version = "0.4.0", default-features = false }
spin = "0.9.8"
x86_64 = "0.14.11"
uart_16550 = "0.3.0"
pic8259 = "0.10.4"
pc-keyboard = "0.7.0"
macro_pub = "0.1.0"

[dependencies]
ovmf-prebuilt = "0.1.0-alpha"
terminal_size = "0.3.0"
wait-timeout = "0.2.0"

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.4"
