[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bootloader_api = "0.11.4"
bootloader-x86_64-common = "0.11.4"
log = { version = "0.4.20", default-features = false }
conquer-once = { version = "0.4.0", default-features = false }
