cargo-features = ["per-package-target"]

[package]
name = "klib"
version = "0.1.0"
edition = "2021"
default-target = "x86_64-unknown-none"

[dependencies]
bootloader_api = { workspace = true }
bootloader-x86_64-common = { workspace = true }
log = { workspace = true }
conquer-once = { workspace = true }
spin = { workspace = true }
x86_64 = { workspace = true }
uart_16550 = { workspace = true }
pic8259 = { workspace = true }
pc-keyboard = { workspace = true }
macro_pub = { workspace = true }
